--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cascade Fix</title>
     <link rel="stylesheet" href="styles.css">
@@ -10,8 +11,8 @@
     <p class="para">I'm just a paragraph with extra bold text!</p>
     <p class="small-para">I'm a smaller paragraph, also with extra bold text!</p>
 
-    <button id="confirm-button">Confirm</button>
-    <button id="cancel-button">Cancel</button>
+    <button id="confirm-button" class="button confirm">Confirm</button>
+    <button id="cancel-button" class="button cancel">Cancel</button>
 
     <div class="text">I'm a div with thin text!</div>
     <div class="text">I'm a div with thin text and a child div!</div>
