Fix missed class and update styles.css to reflext the changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <p class="para">I'm just a paragraph with extra bold text!</p>
-    <p class="small-para">I'm a smaller paragraph, also with extra bold text!</p>
+    <p class="para small-para">I'm a smaller paragraph, also with extra bold text!</p>
 
     <button id="confirm-button" class="button confirm">Confirm</button>
     <button id="cancel-button" class="button cancel">Cancel</button>
@@ -18,6 +18,5 @@
     <div class="text">I'm a div with thin text and a child div!</div>
         <div class="text child">I'm a smaller child div with extra bold text.</div>
     </div>
-
 </body>
 </html>
